Alteração da apresentação de cores

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 					<input type="button" name="stopLap" id="stopLap" class="btnStop" value="Stop">
 				</div>
 			</frameset>
-			<div id="timerDisplay">Timer
+			<div id="timerDisplayContainer">
+				<div id="timerDisplay">Timer</div>
 			</div>
 		</main>
 		<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
